Bug 1001708: Don't use ternary operator with class const statics r=jesup